--- a/examples/a2c-config.yaml
+++ b/examples/a2c-config.yaml
@@ -1,11 +1,11 @@
 config:
   env-name: "CartPole-v0"
-  render: True
+  render: False
   log-std: -1.0 #log std for the policy
   gamma: 0.99
   tau: 0.95  # GAE lambda
   l2-reg: 0.001 # l2-regularization regression
-  num-threads: 2
+  num-threads: 16
   lr: 0.01
   seed: 1 # random seed
   min-batch-size: 2048 # batch size for A2C Update
